chore(deploy): try to fix server-side router in gh-pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +24,9 @@ jobs:
 
       - run: pnpm install
       - run: pnpm run build
+
+      - name: Create 404.html for GitHub Pages
+        run: echo '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0; URL=./index.html"><title>Redirecting...</title></head><body><p>Redirecting to <a href="./index.html">home page</a>...</p></body></html>' > ./dist/404.html
 
       - uses: peaceiris/actions-gh-pages@v4
         with:
