--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ts-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
